objects/FSL_Timesheet__c.object
<CustomObject>
    <description>Custom object for FSL Times</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Service_Order__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sub_Type_R__c</fullName>
        <description>The field is created to displayed the Mentioned field label on Report</description>
        <formula>Additional_Sub_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Sub Type/Payer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sub_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Sub Type/Payer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose Additional Sub Type associated with the Service Order.</errorMessage>
            <filterItems>
                <field>$Source.Service_Order__c</field>
                <operation>equals</operation>
                <valueField>FSL_Additional_Sub_Type__c.Service_Order__c</valueField>
            </filterItems>
            <filterItems>
                <field>FSL_Additional_Sub_Type__c.TimesheetFlag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSL_Additional_Sub_Type__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocate_to_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Allocate time to selected Service Order on Start or End Time change</description>
        <label>Transfer Balance to Job</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>You cannot Transfer Hours to a “Closed” or “Canceled” Work Order.</errorMessage>
            <filterItems>
                <field>WorkOrder.Status</field>
                <operation>notEqual</operation>
                <value>Closed, Canceled, Intake</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Type__c</field>
                <operation>equals</operation>
                <value>External</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Status</field>
                <operation>notEqual</operation>
                <value>Closed, Canceled</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Type__c</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>FSL Timesheets (Allocate to Service Order)</relationshipLabel>
        <relationshipName>FSL_Timesheets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resource_ERP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>901-Internal Administration</fullName>
                </value>
                <value>
                    <fullName>902-Holiday</fullName>
                </value>
                <value>
                    <fullName>903-Sickness</fullName>
                </value>
                <value>
                    <fullName>904-Awaiting Parts</fullName>
                </value>
                <value>
                    <fullName>905-Awaiting Instructions</fullName>
                </value>
                <value>
                    <fullName>906-Training</fullName>
                </value>
                <value>
                    <fullName>907-Maintenance</fullName>
                </value>
                <value>
                    <fullName>908-Authorised Absense</fullName>
                </value>
                <value>
                    <fullName>909-Customer Visits</fullName>
                </value>
                <value>
                    <fullName>910-Unauthorised Absence</fullName>
                </value>
                <value>
                    <fullName>911-Forklift Driving</fullName>
                </value>
                <value>
                    <fullName>912-Non Chargeable Travel</fullName>
                </value>
                <value>
                    <fullName>913-Flex Contract Adjustment</fullName>
                </value>
                <value>
                    <fullName>914-Apprentice Training</fullName>
                </value>
                <value>
                    <fullName>915-Internal Trainers</fullName>
                </value>
                <value>
                    <fullName>916-Training - Technical</fullName>
                </value>
                <value>
                    <fullName>917-Training - Personal Development</fullName>
                </value>
                <value>
                    <fullName>918-Training - Health, Safety &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>919-Training - Corporate &amp; Mandatory</fullName>
                </value>
                <value>
                    <fullName>920-HS&amp;E - Lock Out Tag Out, Job Safety</fullName>
                </value>
                <value>
                    <fullName>101-TOOL STORE</fullName>
                </value>
                <value>
                    <fullName>102-TRAINING</fullName>
                </value>
                <value>
                    <fullName>103- TRAINING APPRENTICE</fullName>
                </value>
                <value>
                    <fullName>104-STAND BY TIME</fullName>
                </value>
                <value>
                    <fullName>105-10HR BREAK</fullName>
                </value>
                <value>
                    <fullName>106-PUBLIC RELATIONS</fullName>
                </value>
                <value>
                    <fullName>107- SUPERVISION</fullName>
                </value>
                <value>
                    <fullName>108-CLEANING</fullName>
                </value>
                <value>
                    <fullName>109-CLERICAL</fullName>
                </value>
                <value>
                    <fullName>111-LEAVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CICO_Late_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CICO Late Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Duration__c</fullName>
        <description>Time established in hours</description>
        <formula>(EndTime__c - StartTime__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMI Duration (hr)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Mileage__c</fullName>
        <label>Calculated Mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_hr__c</fullName>
        <formula>floor(Duration_min__c / 6)*0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (hr)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_min__c</fullName>
        <formula>ceiling((EndTime__c - StartTime__c) * 24 * 60)</formula>
        <label>Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <label>ERP Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Sub_Type__c</fullName>
        <label>ERP Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elapsed_Hours__c</fullName>
        <description>If the difference between current time and end time is &gt;12 hours. This field should be checked.</description>
        <formula>(NOW()- ( EndTime__c ) )*24 &gt;12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the difference between current time and end time is &gt;12 hours. This field should be checked.</inlineHelpText>
        <label>Elapsed Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Address__c</fullName>
        <label>End Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <inlineHelpText>Displays Integration Error&apos;s</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL_CheckTimeAltered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL_CheckTimeAltered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Edited__c</fullName>
        <formula>IF(FSL_CheckTimeAltered__c , IMAGE(&apos;/resource/FSL_AlteredTime&apos;, &quot;FSL_AlteredTime&quot;, 26, 26),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_TimesheetInvalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Clocked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Clocked Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Field_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Field Changed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_User_As_Resource__c</fullName>
        <description>created for report filter</description>
        <formula>IF($User.Id == Resource__c, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login User As Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Measure__c</fullName>
        <description>this field value will be coming from service order Mileage Measure field</description>
        <formula>TEXT(Service_Order__r.Mileage_Measure__c)</formula>
        <label>Mileage Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Comments field for ClockIn User</description>
        <label>Notes</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Meal Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Absence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Absence</label>
        <referenceTo>ResourceAbsence</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_ERP__c</fullName>
        <defaultValue>CASE($User.ERP__c, &quot;BMS&quot;, &quot;BMS&quot;, &quot;MOVEX&quot;, &quot;MOVEX&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-UK&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-MYD&quot;, &quot;MOVEX-190&quot;, &quot;MOVEX-190&quot;, &quot;MOVEX-200&quot;, &quot;MOVEX-200&quot;, &quot;MOVEX-250&quot;, &quot;MOVEX-250&quot;, &quot;MOVEX-270&quot;, &quot;MOVEX-270&quot;, &quot;MOVEX-175&quot;, &quot;MOVEX-175&quot;, &quot;&quot;)</defaultValue>
        <label>Resource ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Name_R__c</fullName>
        <description>The field is created to displayed the Mentioned field label on Report</description>
        <formula>Resource__r.FirstName + &quot; &quot; + Resource__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <description>Text field for List View Search</description>
        <label>Resource Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Territory_Code__c</fullName>
        <formula>LEFT( Service_Order__r.ServiceTerritory.Location_Code__c , 11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_User_Id__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FSL_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Num__c</fullName>
        <description>Text field for List View Search</description>
        <label>Service Order#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Type__c</fullName>
        <description>Type: Internal vs External</description>
        <formula>TEXT(Service_Order__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>WorkOrder.Status</field>
                <operation>notEqual</operation>
                <value>Closed, Canceled, Intake</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Type__c</field>
                <operation>equals</operation>
                <value>External</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Status</field>
                <operation>notEqual</operation>
                <value>Closed, Canceled</value>
            </filterItems>
            <filterItems>
                <field>WorkOrder.Type__c</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>FSL Timesheets</relationshipLabel>
        <relationshipName>FSL_Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shop_Vehicle_Number_R__c</fullName>
        <description>The field is created to displayed the Mentioned field label on Report</description>
        <formula>Shop_Vehicle_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shop Vehicle Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_Vehicle_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shop Vehicle Number</label>
        <referenceTo>Shop_Vehicle_Number__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Address__c</fullName>
        <label>Start Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                    <isActive>false</isActive>
                    <label>Submit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <formula>Service_Order__r.FSL_Sub_Type__r.Name</formula>
        <label>Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_ERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TS_Created_from_Mobile_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TS Created from Mobile App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timesheet_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whenever a timesheet is  successfully Submitted will update this Check box to true.</description>
        <label>Timesheet Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Clocked_Hrs__c</fullName>
        <formula>IF( FSL_TimesheetInvalid__c  &amp;&amp; NOT(ISBLANK(Service_Order__r.FSL_Travel_Clocked_Hours__c)) , Service_Order__r.FSL_Travel_Clocked_Hours__c- Duration_hr__c, Service_Order__r.FSL_Travel_Clocked_Hours__c+ Duration_hr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Travel Clocked Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Working_Clocked_Hrs__c</fullName>
        <formula>IF(FSL_TimesheetInvalid__c &amp;&amp; NOT(ISBLANK(Service_Order__r.FSL_Repair_Clocked_Hrs__c)) &amp;&amp; NOT(ISBLANK(Service_Order__r.FSL_Diagnostic_Clocked_Hrs__c))&amp;&amp; NOT(ISBLANK(Service_Order__r.FSL_JobPlan_Clocked_Hrs__c)) , (Service_Order__r.FSL_Repair_Clocked_Hrs__c+ Service_Order__r.FSL_Diagnostic_Clocked_Hrs__c+ Service_Order__r.FSL_JobPlan_Clocked_Hrs__c) - Duration_hr__c, (Service_Order__r.FSL_Repair_Clocked_Hrs__c+ Service_Order__r.FSL_Diagnostic_Clocked_Hrs__c+ Service_Order__r.FSL_JobPlan_Clocked_Hrs__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Working Clocked Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Job_Number__c</fullName>
        <formula>Allocate_to_Service_Order__r.WorkOrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Triage &amp; Diagnosis</fullName>
                    <default>true</default>
                    <label>Triage &amp; Diagnosis</label>
                </value>
                <value>
                    <fullName>Job Plan</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Warranty Claims</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tscreated__c</fullName>
        <formula>OR($User.Id =  Resource__r.Id, ($User.Id =  Resource__r.Id  &amp;&amp;  NOT( ISBLANK( Allocate_to_Service_Order__c ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tscreated</label>
        <type>Checkbox</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Notes__c</columns>
        <columns>Type__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Mileage__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR (1 AND NOT 2 AND NOT 3) OR (1  AND NOT 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Timesheet_Submitted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FSL_TimesheetInvalid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted</fullName>
        <booleanFilter>1 OR 1 OR 1</booleanFilter>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Resubmitted</value>
        </filters>
        <label>All Submitted</label>
    </listViews>
    <listViews>
        <fullName>All_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Timesheets</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Resource_Name__c</columns>
        <columns>Service_Order_Num__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>ERP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FSL_Timesheet__c.New_Timesheet</value>
        </filters>
        <label>New Timesheets</label>
    </listViews>
    <listViews>
        <fullName>Open_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order_Num__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>ERP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FSL_Timesheet__c.Open_Timesheet</value>
        </filters>
        <label>New Timesheets</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Timesheets</fullName>
        <columns>NAME</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order_Num__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>ERP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FSL_Timesheet__c.Submitted_Timesheet</value>
        </filters>
        <label>Submitted Timesheets</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (1 AND 2 AND 3) OR (1 AND 2 AND NOT 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Timesheet_Submitted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FSL_TimesheetInvalid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open - This Month</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_Submitted</fullName>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Resubmitted</value>
        </filters>
        <label>Submitted - This Month</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4) OR (1 AND 2 AND 3) OR (1 AND 2 AND NOT 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>FSL_Edited__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Resource__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Duration_hr__c</columns>
        <columns>Duration_min__c</columns>
        <columns>Reason__c</columns>
        <columns>Shop_Vehicle_Number__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Additional_Sub_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Timesheet_Submitted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>FSL_TimesheetInvalid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open - This Week</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
</CustomObject>